wordpress/02-wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpresss
  namespace: wordpresss
  labels:
    app: wordpresss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpresss
  template:
    metadata:
      labels:
        app: wordpresss
    spec:
      containers:
        - name: wordpresss
          image: wordpress:6.5-apache
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: wp-content
              mountPath: /var/www/html/wp-content
      volumes:
        - name: wp-content
          persistentVolumeClaim:
            claimName: pvc-wp-content
