wordpress/03-wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: wordpresss
 namespace: wordpresss
 labels:
   app: wordpresss
spec:
 type: ClusterIP
 selector:
   app: wordpresss
 ports:
   - name: http
     port: 80
     targetPort: 80
